2009-09-18  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (fltk_backend::redraw_figure):
	Call __fltk_redraw__ after marking figure as modified.

2009-09-18  John W. Eaton  <jwe@octave.org>

	* mexproto.h: Define OCTINTERP_API if it is not already defined.
	Use C-style comments.

2009-09-16  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/rand.cc (Frandperm): New function.

2009-09-15  Jaroslav Hajek  <highegg@gmail.com>

	* pt-misc.cc (tree_parameter_list::convert_to_const_vector): Pass
	in nargout. Don't return excess elements. Optimize varargout-only case
	to possibly use a shallow copy.
	* pt-misc.h: Update decl.
	* ov-usr-fcn.cc (octave_user_function::do_multi_index_op): Update call
	to tree_parameter_list::convert_to_const_vector.

2009-09-15  Jaroslav Hajek  <highegg@gmail.com>

	* pr-output.cc (Fdisp, Ffdisp): Declare retval as octave_value_list.

2009-09-14  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::pixel2status,
	plot_window::pixel2pos): New argument AXES, which the
	coordinates are relative to.
	(plot_window::handle): Pass axes to pixel2status and pixel2pos.

2009-09-14  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (symbol_table::curr_fcn): New member field.
	(symbol_table::get_curr_fcn, symbol_table::set_curr_fcn): New member
	funcs.
	* symtab.cc (symbol_table::fcn_info::fcn_info_rep::xfind): Use
	symbol_table::get_curr_fcn.
	(symbol_table::fcn_info::fcn_info_rep::x_builtin_find): Ditto.
	* ov-usr-fcn.cc (octave_user_function::octave_user_function): Call
	symbol_table::set_curr_fcn.

2009-09-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.3.50+.
	(OCTAVE_API_VERSION): Now api-v38+.

2009-09-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.3.50.
	(OCTAVE_API_VERSION): Now api-v38.
	(OCTAVE_RELEASE_DATE): Now 2009-09-12.

2009-09-08  Rafael Laboissiere  <rafael@debian.org>

	* pr-output.cc: New test.
